test/Fail/Multiple-polarity-pragmas-for-a-single-name.agda
postulate F : Set → Set

{-# POLARITY F + #-}
{-# POLARITY F - #-}
