test/Fail/Multiple-polarity-pragmas-for-a-single-name.err
Multiple-polarity-pragmas-for-a-single-name.agda:3.14-15: error: [MultiplePolarityPragmas]
Multiple polarity pragmas for F
